# mc25a

./: LICENSE
mc25a_source/: .gitignore  CMakeLists.txt  mc25a_source.jucer
mc25a_source/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
mc25a_source/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
